fix(index.css): :bug: Adjust scrollbar styles to improve accessibility

--- a/src/index.css
+++ b/src/index.css
@@ -130,11 +130,11 @@ layer(base);
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
-  background-color: #000000;
+  background-color: #111828;
   border-radius: 1rem;
 }
 ::-webkit-scrollbar-track {
-  background-color: #000000;
+  background-color: #111828;
   border-radius: 1rem;
 }
 ::-webkit-scrollbar-thumb {
@@ -142,7 +142,7 @@ layer(base);
   border-radius: 1rem;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #0a2a50;
+  background-color: #0d3868;
 }
 
 /* Big calendar react styles */
